--- a/HealthyPick/composer.json
+++ b/HealthyPick/composer.json
@@ -65,6 +65,12 @@
         ],
         "pre-package-uninstall": [
             "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
+        ],
+        "vercel" : [
+            "npm run build",
+            "mkdir -p vercel/ouput/static",
+            "cp -r public/build /vercel/output/static/",
+            "php artisan migrate --force"
         ]
     },
     "extra": {
